@@ -1,5 +1,11 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. Far3 build 1907 API
+	2. truemod пока не трогаем - надо переделывать сам far
+	3. версию плагина не трогаем, иногда реализовывают пожелания трудящихся )
+
+#Revision: 1673
+	Author: ctapmex Date: 2011-03-10 18:06:00 +0500 (Чт, 10 мар 2011)
 	1. переименовываем проект в pcolorer3
 
 #Revision: 1662
